# Console-1701

./: .gitignore  AGENTS.md  BACKLOG.md  CARETAKING.md  README.md  config.example.yml  console-1701-codex-plan-01.md  console-1706-codex-plan-01.md  pyproject.toml
build_order/: 001_local.md  001_local_execution_report_20260503-122717.md  002_regional.md  003_national.md  004_global.md  005_orbital.md  006_system.md
console1701/: __init__.py  adapters.py  api.py  app.py  cli.py  codex_probe.py  config.py  db.py  evidence.py  git_probe.py  handoff.py  interpreter.py  live_probe.py  log_probe.py  rules.py  scanner.py  schema.sql  system_probe.py  terminal_action.py  test_probe.py
console1706/: __init__.py  adapters.py  api.py  app.py  cli.py  codex_probe.py  config.py  db.py  evidence.py  git_probe.py  handoff.py  interpreter.py  live_probe.py  log_probe.py  rules.py  scanner.py  schema.sql  system_probe.py  terminal_action.py  test_probe.py
scripts/: dev_server.sh  install_user_service.sh  scan_once.sh
systemd/: console-1701-news-scan.service  console-1701-news-scan.timer  console-1701-scan.service  console-1701-scan.timer  console-1701.service  console-1706-scan.service  console-1706-scan.timer  console-1706.service
tests/: test_adapters.py  test_app.py  test_codex_probe.py  test_evidence.py  test_git_probe.py  test_handoff.py  test_interpreter.py  test_live_probe.py  test_local_registry.py  test_log_probe.py  test_news_config.py  test_news_ingest.py  test_news_parsers.py  test_news_ranking.py  test_news_schema.py  test_news_systemd.py  test_regional_registry.py  (+4 more)
(+52 files in other folders)
