[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "console-1706"
version = "0.1.0"
description = "Local repo and workflow console"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.25",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
console-1706 = "console1706.cli:main"

[tool.setuptools.packages.find]
include = ["console1706*"]

[tool.setuptools.package-data]
console1706 = ["schema.sql", "templates/*.html", "static/*.css", "static/*.js", "static/*.png"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
